# alilog

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  README.zh-CN.md  main.py  pyproject.toml
.github/workflows/: ci.yml
alilog/: __init__.py  browser_auth.py  cli.py  client.py  config.py  inputs.py  models.py  rendering.py  skills.py  usecases.py
alilog/assets/claude-skill/: SKILL.md
tests/: conftest.py  test_browser_auth.py  test_cli.py  test_client.py  test_config.py  test_inputs.py  test_main.py  test_rendering.py  test_skills.py
